# litegui

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: run-tests.yml
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  main.cpp
examples/sdl3_basic/: CMakeLists.txt
ext/: CMakeLists.txt
src/: CMakeLists.txt  context.cpp  context.h  event.h  litegui.cpp  litegui.h  main.cpp  types.h  widget.h
src/contexts/sdl3/: CMakeLists.txt  sdl3context.cpp  sdl3context.h
tests/: CMakeLists.txt  test_event.cpp
